# word-bank

./: .gitignore  README.md  __init__.py  data_source.py  pyproject.toml
nonebot_plugin_word_bank2/: __init__.py  data_source.py  util.py
word_bank/: __init__.py  data_source.py  util.py
