[tool.poetry]
name = "nonebot-plugin-word-bank2"
version = "0.0.2"
description = "无数据问答插件"
authors = ["kexue <x@kexue.io>"]
license = "GPL-3.0"
homepage = "https://github.com/kexue-z/nonebot-plugin-word-bank2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "2.0.0-beta.1"
nonebot-adapter-onebot = "2.0.0-beta.1"
httpx = ">=0.18.0,<1.0.0"
aiofiles = "^0.8.0"


[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
